Update AnimalAbilities.java